--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/router": "~12.2.0",
     "bootstrap": "^5.1.3",
     "bootswatch": "^5.1.3",
+    "ngx-toastr": "^14.2.1",
     "rxjs": "~6.6.0",
+    "toastr": "^2.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
