--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.2.0",
     "bootstrap": "^5.1.3",
     "bootswatch": "^5.1.3",
+    "ngx-pagination": "^5.1.1",
     "ngx-toastr": "^14.2.1",
     "rxjs": "~6.6.0",
     "toastr": "^2.1.4",
